--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <section id="map-section">
       <h2>Find Us Here</h2>
       <iframe
-        src="https://www.google.com/maps/embed?pb=YOUR_MAP_EMBED_CODE"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434509377!2d-122.42067908468188!3d37.77492927975873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c0fbb2c27%3A0x608fdd8701b4b8b2!2sCoffee+Shop!5e0!3m2!1sen!2sus!4v1619031410703!5m2!1sen!2sus"
         width="600"
         height="450"
         style="border:0;"
