--- a/index.html
+++ b/index.html
@@ -29,9 +29,72 @@
     <section class="hero">
       <h1>Welcome to Mocha Mocha</h1>
       <p>Your favorite coffee spot in Dundalk.</p>
-      <a href="menu.html" class="btn">View Our Menu</a>
-    </section>
+      <p>Find the best products here!</p>
+      <a href="menu.html" class="btn">View Our Menu</a>         
   </main>
+  <section id="blog" class="blog-section">
+    <h2>Latest from Our Blog</h2>
+    <div class="blog-container">
+      <article class="blog-post">
+        <h3>How to Choose the Best Products</h3>
+        <p>Discover tips and tricks to pick the perfect items for your needs.</p>
+        <a href="#" class="read-more">Read More</a>
+      </article>
+      <article class="blog-post">
+        <h3>Top Trends in 2025</h3>
+        <p>Stay ahead with the latest trends in fashion, tech, and more.</p>
+        <a href="#" class="read-more">Read More</a>
+      </article>
+      <article class="blog-post">
+        <h3>5 Must-Have Items This Season</h3>
+        <p>Find out which products are trending and why you need them now.</p>
+        <a href="#" class="read-more">Read More</a>
+      </article>
+    </div>
+  </section>
+  <section id="featured-products" class="featured-products-section">
+    <h2>Featured Products</h2>
+    <div class="product-container">
+      <div class="product">
+        <img src="assets/lattesig.jpg" alt="Product 1">
+        <h3>Signature Latte</h3>
+        <p>€4.50</p>
+      </div>
+      <div class="product">
+        <img src="assets/mochamuffin.jpg" alt="Product 2">
+        <h3>Mocha Muffin</h3>
+        <p>€2.00</p>
+      </div>
+    </div>
+    <section id="subscribe" class="subscribe-section">
+      <h2>Subscribe to Our Newsletter</h2>
+      <p>Be the first to know about new products, discounts, and events!</p>
+      <form>
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </section>       
+  </section>  
+  <section id="testimonials" class="testimonials-section">
+    <h2>What Our Customers Say</h2>
+    <div class="testimonial-container">
+      <div class="testimonial">
+        <p>"The coffee here is amazing! Can't start my day without it."</p>
+        <h4>- Jane Doe</h4>
+      </div>
+      <div class="testimonial">
+        <p>"Great atmosphere, friendly staff, and the best latte in town."</p>
+        <h4>- John Smith</h4>
+      </div>
+    </div>
+  </section>
+  <section id="social" class="social-section">
+    <h2>Follow Us</h2>
+    <div class="social-icons">
+      <a href="https://facebook.com" target="_blank">Instagram</a>
+      <a href="https://instagram.com" target="_blank">TikTok</a>
+    </div>
+  </section>    
   <footer>
     <p>© 2025 Mocha Mocha | Powered by JB Developments</p>
   </footer>
