--- a/menu.html
+++ b/menu.html
@@ -37,6 +37,18 @@
             <p>€2.50</p>
             <button class="add-to-cart">Add to Cart</button>
           </div>
+          <div class="menu-item" data-name="Signarute Latte" data-price="4.50">
+            <img src="assets/lattesig.jpg" alt="Signaturelatte">
+            <h2>Signarture Latte</h2>
+            <p>€4.50</p>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
+          <div class="menu-item" data-name="Mocha Muffin" data-price="2.00">
+            <img src="assets/mochamuffin.jpg" alt="Mochamuffin">
+            <h2>Mocha Muffin</h2>
+            <p>€2.00</p>
+            <button class="add-to-cart">Add to Cart</button>
+          </div>
       </div>
       <section id="cart-section">
         <h2>Your Cart</h2>
