--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <section id="social" class="social-section">
     <h2>Follow Us</h2>
     <div class="social-icons">
-      <a href="https://facebook.com" target="_blank">Instagram</a>
-      <a href="https://instagram.com" target="_blank">TikTok</a>
+      <a href="https://instagram.com" target="_blank">Instagram</a>
+      <a href="https://tiktok.com" target="_blank">TikTok</a>
     </div>
   </section>    
   <footer>
