--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css?v=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <script src="script.js?v=1.0"></script>
   <!-- Firebase Compatibility SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
@@ -25,7 +26,7 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="checkout.html">Checkout</a>
-      <a href="profile.html">Profile</a>  
+      <a href="profile.html">Profile</a>   
     </nav>
   </header>
   <main>
@@ -94,9 +95,13 @@
   <section id="social" class="social-section">
     <h2>Follow Us</h2>
     <div class="social-icons">
-      <a href="https://instagram.com" target="_blank">Instagram</a>
-      <a href="https://tiktok.com" target="_blank">TikTok</a>
-    </div>
+      <a href="https://instagram.com" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://tiktok.com" target="_blank">
+        <i class="fab fa-tiktok"></i>
+      </a>
+    </div>    
   </section>    
   <footer>
     <p>© 2025 Mocha Mocha | Powered by JB Developments</p>
