--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mocha Mocha</title>
-  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <script src="script.js?v=1.0"></script>
   <!-- Firebase Compatibility SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-storage-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-storage-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-firestore-compat.js"></script>
   <script src="script.js"></script>  
 </head>
 <body>
@@ -34,7 +32,8 @@
       <h1>Welcome to Mocha Mocha</h1>
       <p>Your favorite coffee spot in Dundalk.</p>
       <p>Find the best products here!</p>
-      <a href="menu.html" class="btn">View Our Menu</a>         
+      <a href="menu.html" class="btn">View Our Menu</a>
+    </section>
   </main>
   <section id="blog" class="blog-section">
     <h2>Latest from Our Blog</h2>
@@ -106,7 +105,5 @@
   <footer>
     <p>© 2025 Mocha Mocha | Powered by JB Developments</p>
   </footer>
-  <script>
-  </script>
 </body>
 </html>
