--- a/menu.html
+++ b/menu.html
@@ -34,9 +34,9 @@
             <p>€2.50</p>
             <button class="add-to-cart">Add to Cart</button>
           </div>
-          <div class="menu-item" data-name="Signarute Latte" data-price="4.50">
-            <img src="assets/lattesig.jpg" alt="Signaturelatte">
-            <h2>Signarture Latte</h2>
+          <div class="menu-item" data-name="Signature Latte" data-price="4.50">
+            <img src="assets/lattesig.jpg" alt="signaturelatte">
+            <h2>Signature Latte</h2>
             <p>€4.50</p>
             <button class="add-to-cart">Add to Cart</button>
           </div>
