--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!-- Contact Section -->
 <!DOCTYPE html>
 <html lang="en">
+<title>Contact - Mocha Mocha</title>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
